crates/ruff_python_parser/tests/snapshots/invalid_syntax@param_with_star_annotation_py310.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/param_with_star_annotation_py310.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..69,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 44..68,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 48..51,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 51..63,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: Some(
                            Parameter {
                                range: 52..62,
                                node_index: NodeIndex(None),
                                name: Identifier {
                                    id: Name("args"),
                                    range: 53..57,
                                    node_index: NodeIndex(None),
                                },
                                annotation: Some(
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 59..62,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 60..62,
                                                    id: Name("Ts"),
                                                    ctx: Load,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                runtime_type_comment: None,
                                runtime_type_comment_bytes: None,
                            },
                        ),
                        kwonlyargs: [],
                        kwarg: None,
                        runtime_defaults: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 65..68,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 65..68,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.10"}
2 | def foo(*args: *Ts): ...
  |                ^^^ Syntax Error: Cannot use star annotation on Python 3.10 (syntax was added in Python 3.11)
